# snake-game-openGL

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
resources/shaders/: fragment.frag  vertex.vert
src/: CMakeLists.txt  coordinates.hpp  engine.cpp  engine.hpp  food.cpp  food.hpp  frame.cpp  frame.hpp  game.cpp  game.hpp  main.cpp  main.h  shader.cpp  shader.hpp  snake.cpp  snake.hpp  tiled_render.cpp  tiled_render.hpp  window.cpp  window.hpp
third-parties/: glad.c  glfw3.lib
