# CMakeList.txt : CMake project for SnakeGameOpenGL, include source and define
# project specific logic here.
#

# Add source to this project's executable.
#add_library(snakecore
#    Game.cpp
#    Snake.cpp
#    Food.cpp
    # add other internal .cpp files
#)
#target_include_directories(SnakeGameOpenGL
#    PUBLIC
#        ${CMAKE_CURRENT_SOURCE_DIR}/internals
#)

# TODO: Add tests and install targets if needed.